# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "pydevlake"
version = "0.1.0"
description = "Devlake plugin framework"
authors = ["Camille Teruel <camille.teruel@meri.co>", "Keon Amini <keon.amini@merico.dev>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
sqlmodel = "^0.0.8"
mysqlclient = "^2.1.1"
requests = "^2.28.1"
inflect = "^6.0.2"
fire = "^0.4.0"
pydantic = "^1.10.2"
pydevd-pycharm = "^231.6471.3"
pytest = "^7.2.2"
jsonref = "^1.1.0"
psycopg2 = "^2.9.5"
jsonpointer = "^2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
