[tool.poetry]
name = "azure"
version = "0.1.0"
description = ""
authors = ["Hezheng Yin <hezheng@merico.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydevlake = { path = "../../pydevlake", develop = false }
iso8601 = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
