[tool.poetry]
name = "grafanaoncall"
version = "0.1.0"
description = ""
authors = ["Alex Tonkonozhenko <tonkonozhenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pydevlake = { path = "../../pydevlake", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
